tests/bad/func_invalid_param.ae
/// fail: Invalid parameter type

def foo(x: Foo) {  }